fix(proxy): keep the network player list case-insensitive once published